[gd_scene load_steps=14 format=3 uid="uid://dw6fsi37gpvsg"]

[ext_resource type="Script" uid="uid://5jebutrcie4f" path="res://map_phase/chapel/assets/candle/chapel_candle.gd" id="1_p2mk0"]
[ext_resource type="Texture2D" uid="uid://ct0f21su7007" path="res://map_phase/chapel/assets/candle/lit candle.png" id="2_c5pr7"]
[ext_resource type="Texture2D" uid="uid://boxx3tj3q03l8" path="res://map_phase/chapel/assets/candle/unlit candle.png" id="2_j1ykk"]
[ext_resource type="Material" uid="uid://bjyqoqv8v1sfa" path="res://map_phase/chapel/assets/candle/chapel_candle_material.tres" id="3_ed68v"]
[ext_resource type="Texture2D" uid="uid://10qhshvxmbrc" path="res://dev/light_textures/chapel_candle_round.tres" id="4_p2mk0"]
[ext_resource type="Texture2D" uid="uid://bmj3pmiwvitce" path="res://art/icons/arrow-right.png" id="6_ed68v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ssiyx"]
size = Vector2(4.6, 8.000003)

[sub_resource type="PlaneMesh" id="PlaneMesh_ssiyx"]
size = Vector2(40, 50)
orientation = 2

[sub_resource type="Animation" id="Animation_p2mk0"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(2.4648438, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1.9082031, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_j1ykk")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshInstance2D-Fire:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_k4e86"]
resource_name = "slowly_fading fire"
length = 20.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2, 0),
"points": PackedFloat32Array(5, 0, 0, 2.5, -0.83333164, 1e-05, -2.5, 0.4108056, 0, 0),
"times": PackedFloat32Array(0, 20)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2, 0),
"points": PackedFloat32Array(3.87, 0, 0, 2.5, -0.6449983, 1e-05, -2.5, 0.31803218, 0, 0),
"times": PackedFloat32Array(0, 20)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("2_c5pr7"), ExtResource("2_j1ykk")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshInstance2D-Fire:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oe71q"]
_data = {
&"RESET": SubResource("Animation_p2mk0"),
&"slowly_fading fire": SubResource("Animation_k4e86")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_p2mk0"]
radius = 256.0

[sub_resource type="CircleShape2D" id="CircleShape2D_oe71q"]
radius = 64.0

[node name="ChapelCandle" type="StaticBody2D"]
script = ExtResource("1_p2mk0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 5.999993)
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_ssiyx")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_j1ykk")

[node name="MeshInstance2D-Fire" type="MeshInstance2D" parent="."]
material = ExtResource("3_ed68v")
position = Vector2(-2, -103)
rotation = 1.5707964
scale = Vector2(4, 2)
mesh = SubResource("PlaneMesh_ssiyx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_oe71q")
}

[node name="PointLight2D" type="PointLight2D" parent="."]
light_mask = 33
scale = Vector2(2.4648438, 1.9082031)
shadow_enabled = true
shadow_item_cull_mask = 33
texture = ExtResource("4_p2mk0")

[node name="Timer-LightsOff" type="Timer" parent="."]
wait_time = 15.0

[node name="Area2D-CollisionLight" type="StaticBody2D" parent="." groups=["EnemyVisionBlock"]]
z_index = 10
y_sort_enabled = true
position = Vector2(0, -69)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D-CollisionLight"]
shape = SubResource("CircleShape2D_p2mk0")

[node name="Area2D-Interactable" type="Area2D" parent="."]
position = Vector2(0, -3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D-Interactable"]
shape = SubResource("CircleShape2D_oe71q")
debug_color = Color(0.55862606, 0.39717948, 1, 0.41960785)

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_left = 17.0
offset_top = -125.0
offset_right = 57.0
offset_bottom = -85.0
rotation = 1.5707964
scale = Vector2(1, 0.7600016)
texture = ExtResource("6_ed68v")

[connection signal="body_entered" from="Area2D-Interactable" to="." method="_on_area_2d_interactable_body_entered"]
[connection signal="body_exited" from="Area2D-Interactable" to="." method="_on_area_2d_interactable_body_exited"]
